# processing2

./: CMakeLists.txt  CMakePresets.json  LICENSE  config.json  graph.json
gtest/: gtest.cc  gtest_filter_custom_addmultipledron.cc  gtest_filter_custom_addmultipledron.h  gtest_filter_custom_velocityfilter.cc  gtest_filter_custom_velocityfilter.h  gtest_filter_custom_viterbi.cc  gtest_filter_custom_viterbi.h  gtest_filter_median_impl_2.cc  gtest_filter_median_impl_2.h  gtest_graph.cpp  gtest_graph.hpp  gtest_graph_threads.cpp  gtest_graph_threads.hpp  test_addmultipledron.json  test_dataset.json  test_graph.json  test_graph2.json  test_graph3.json  test_graph_config.json  test_viterbi.json
gtest_it/: gtest.cc  gtest_filter_custom_viterbi.cc  gtest_filter_custom_viterbi.h  test_bounds.json  test_config.json  test_dataset.json  test_graph.json  test_graph_config.json  test_postprocess.json  test_preprocess.json
include/: graph.hpp  graph_global.h  graph_threads.hpp  processing.h  processing_global.h  processing_threads.h
src/: graph.cpp  graph_threads.cpp  processing.cc  processing.cpp  processing_threads.cpp
src/Adder/: adder.cc  adder.h  adderlist.h
src/Adder/adders/: baseadder.cc  baseadder.h  custom_none.cc  custom_none.h  opencv_absdiff.cc  opencv_absdiff.h  opencv_add.cc  opencv_add.h  opencv_addweighted.cc  opencv_addweighted.h
src/Filter/: filter.cc  filter.h  filterlist.h
src/Filter/filters/: basefilter.cc  basefilter.h  custom_adddron_impl.cc  custom_adddron_impl.h  custom_addgaussiannoise.cc  custom_addgaussiannoise.h  custom_addmultipledron.cc  custom_addmultipledron.h  custom_none.cc  custom_none.h  custom_velocityfilter.cc  custom_velocityfilter.h  custom_viterbifilter.cc  custom_viterbifilter.h  custom_viterbiglobal.cc  custom_viterbiglobal.h  opencv_bilateralfilter.cc  opencv_bilateralfilter.h  opencv_bitwisenot.cc  opencv_bitwisenot.h  opencv_blur.cc  opencv_blur.h  opencv_canny.cc  opencv_canny.h  opencv_color.cc  opencv_color.h  opencv_findcontours.cc  opencv_findcontours.h  opencv_gaussianblur.cc  opencv_gaussianblur.h  opencv_inrange.cc  opencv_inrange.h  opencv_medianblur.cc  opencv_medianblur.h  opencv_morphologyoperation.cc  opencv_morphologyoperation.h  opencv_regionofinterest.cc  opencv_regionofinterest.h  opencv_resize.cc  opencv_resize.h  (+4 more)
src/Filter/filters/viterbi/: velocityfilter_impl.cc  velocityfilter_impl.h  viterbi.cc  viterbi.h  viterbifilter_impl.cc  viterbifilter_impl.h  viterbiglobal_impl.cc  viterbiglobal_impl.h
src/Subtractor/: subtractor.cc  subtractor.h  subtractorlist.h
src/Subtractor/subtractors/: basesubtractor.h  bgslibrary_abl.cc  bgslibrary_abl.h  bgslibrary_asbl.cc  bgslibrary_asbl.h  bgslibrary_lobster.cc  bgslibrary_lobster.h  bgslibrary_vibe.cc  bgslibrary_vibe.h  bgslibrary_weightedmovingmean.cc  bgslibrary_weightedmovingmean.h  bgslibrary_weightedmovingvariance.cc  bgslibrary_weightedmovingvariance.h  custom_median.cc  custom_median.h  custom_median2.cc  custom_median2.h  custom_median_implementation.cc  custom_median_implementation.h  custom_median_implementation_2.cc  custom_median_implementation_2.h  custom_none.cc  custom_none.h  custom_pbas.cc  custom_pbas.h  opencv_cnt.cc  opencv_cnt.h  opencv_gmg.cc  opencv_gmg.h  opencv_gsoc.cc  opencv_gsoc.h  opencv_knn.cc  opencv_knn.h  opencv_lsbp.cc  opencv_lsbp.h  opencv_mog.cc  opencv_mog.h  opencv_mog2.cc  opencv_mog2.h
src/Subtractor/subtractors/LBSP/: BackgroundSubtractorLBSP.cc  BackgroundSubtractorLBSP.h  BackgroundSubtractorLBSP_.cc  BackgroundSubtractorLBSP_.h  BackgroundSubtractorLOBSTER.cc  BackgroundSubtractorLOBSTER.h  BackgroundSubtractorPAWCS.cc  BackgroundSubtractorPAWCS.h  BackgroundSubtractorSuBSENSE.cc  BackgroundSubtractorSuBSENSE.h  DistanceUtils.h  LBSP.cc  LBSP.h  LBSP_.cc  LBSP_.h  RandUtils.h
src/Subtractor/subtractors/PBAS_0.1/: LICENSE.txt  PBAS.cc  PBAS.h
src/Subtractor/subtractors/ViBe/: vibe-background-sequential.cc  vibe-background-sequential.h
